[B]Advanced Emulator Launcher | version 0.9.1 | xx February 2017[/B]

WIP      Scan Software Lists.

WIP      Launch machines with software lists.

WIP      On filter `Machines by Software List`, substitute raw Software List name by the proper SL 
         name.

WIP      Print the number of clones each machine has. In general, print the number of items
         on a submenu.
         
WIP      In a parent list, if there is not clones, then add the ability to launch games from the
         parent list.
         See http://forums.bannister.org/ubbthreads.php?ubb=showflat&Number=108507#Post108507

WIP      Allow user to choose default assets as AEL does.

WIP      Switch in settings to diplay Working machines only.
         See http://forum.kodi.tv/showthread.php?tid=304186&pid=2506150#pid2506150

WIP      "I get an error whenever trying to open any "Ball & Paddle" category. I'm pretty sure this 
         is due to the ampersand, because all the other categories I've tried work. This issue doesn't 
         affect ROMs with an ampersand in their name, like Cloak & Dagger."
         See http://forum.kodi.tv/showthread.php?tid=304186&pid=2506150#pid2506150


[B]Advanced Emulator Launcher | version 0.9.0 | 15 January 2017[/B]

FEATURE  Extract MAME.xml from MAME executable. Tested only on Linux.

FEATURE  Generate main MAME machine database, indices and catalogs from MAME.xml.

FEATURE  Scan ROMs and tell the user about Have/Missing ROMs.

FEATURE  Launch MAME non-Software List (arcade) machines.

FEATURE  Scan CHDs and samples.

FEATURE  Scan assets and build assets database.

FEATURE  Display MAME machine metadata/artwork.

FEATURE  Build Software List catalog.